--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-data-grid": "^3.0.11",
     "react-datepicker": "^1.4.1",
+    "react-dates": "^18.2.0",
     "react-day-picker": "^7.1.6",
     "react-dom": "^15.4.2",
     "react-grid-layout": "^0.16.6",
